2008-03-12  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #7724: Copying of sysfolders or pages with entries connected via mm database entries fail (thanks to Niels Pardon)

2008-03-08  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #7511: IRRE - Issues with expand/collapse of child records

2008-03-03  Ingmar Schlecht  <ingmar@typo3.org>

	* Release of TYPO3 4.1.6

2008-03-03  Michael Stucki  <michael@typo3.org>

	* Fixed bug #6663: Unserialized objects not debugged properly (patch by Francois Suter)

2008-03-01  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #5838: cli_dispatch.phpsh doesn't work on windows platforms

2008-02-28  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5252: Pages with "Hide in menu" checked use normal page icon in list module (Thanks to Andreas Wagner)
	* Fixed bug #7693: New page wizard ignores "hide in menu" flag for page icons (Thanks to Christian Kuhn)

2008-02-26  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #7523: Description of properties is missing in install tool (Thanks to Steffen Kamper)

2008-02-23  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #6885: Nested USER_INT, COA_INT, etc. objects are not rendered

2008-02-22  Benjamin Mack  <mack@xnos.org>

	* Fixed bug #7445: Malformed translated locallang causes PHP crash (Thanks to Francois Suter)

2008-02-22  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #7158: DBAL fixes to Indexed Search backend module (Thanks to Moreno Feltscher)

2008-02-17  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #5693: options.additionalPreviewLanguages is showing wrong records for table pages (Thanks to Helmut Hummel)

2008-02-16  Benjamin Mack  <mack@xnos.org>

	* Fixed bug #5303: t3skin - pilup.gif not the same style as pildown.gif
	* Fixed bug #7454: Category Treeview in BE-Forms has gap between 2 lines (Thanks to Stefan Geith)

2008-02-04  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #7029: tslib_cObj uses deprecated function call_user_method